# Line

./: .env.deploy.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/(protected)/: layout.tsx
components/auth/: auth-provider.tsx
components/landing/: cta.tsx  features.tsx  hero.tsx  how-it-works.tsx  nft-showcase.tsx
contracts/marketplace/: .binpath  Cargo.toml  build.rs
contracts/marketplace/app/: Cargo.toml
contracts/marketplace/app/src/: lib.rs
contracts/marketplace/app/src/services/: mod.rs
contracts/marketplace/app/src/services/marketplace/: clients.rs  funcs.rs  mod.rs
contracts/marketplace/src/: lib.rs
contracts/marketplace/tests/: marketplace_tests.rs
contracts/nft/: .binpath  Cargo.toml  build.rs
contracts/nft/app/: Cargo.toml
contracts/nft/app/src/: lib.rs
contracts/nft/app/src/services/: mod.rs
contracts/nft/app/src/services/nft/: funcs.rs  mod.rs
contracts/nft/src/: lib.rs
contracts/nft/tests/: nft_tests.rs
docs/: architecture_boundaries.md  backend_architecture.md  backend_minter_integration.md  line_token_deploy.md  mock_features_implementation.md  nft_deploy.md  refactor_template.md
hooks/: useAuctions.ts  useMarketplaceActions.ts  usePolling.ts  useSails.ts  useTransactionToasts.tsx
lib/: db-helpers.ts  db.ts  utils.ts
prisma/: schema.prisma  seed.sql  seed.ts
scripts/: build_contracts.sh  build_nft.sh  deploy_line_token_testnet.sh  generate-backend-keys.ts
(+127 files in other folders)
