[package]
name = "marketplace"
version = "1.0.0"
authors = ["LINE Team"]
edition = "2021"
license = "MIT"

[dependencies]
marketplace-app = { path = "app" }

[build-dependencies]
marketplace-app = { path = "app" }
sails-rs = { version = "0.9.2", features = ["wasm-builder"] }
sails-idl-gen = "0.9.2"

[dev-dependencies]
marketplace = { path = ".", features = ["wasm-binary"] }
sails-rs = { version = "0.9.2", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm-binary = []
